--- a/package.json
+++ b/package.json
@@ -6,8 +6,21 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "14.3.5",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
     "@nrwl/js": "14.3.5",
+    "@nrwl/linter": "14.1.9",
     "@nrwl/workspace": "14.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "5.18.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "nx": "14.3.5",
     "prettier": "^2.6.2",
     "typescript": "~4.7.2"
