chore(domain-core): initialize nest lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@tb-main/domain-core": [
+        "libs/domain-core/src/index.ts"
+      ]
+    }
   },
   "exclude": [
     "node_modules",
