--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.0.0",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.3.5",
     "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.4.2",
     "@nrwl/js": "14.3.5",
     "@nrwl/linter": "14.1.9",
     "@nrwl/nest": "^14.4.2",
     "@nrwl/workspace": "14.3.5",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "5.18.0",
     "eslint": "^8.16.0",
@@ -22,8 +34,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "27.5.1",
     "nx": "14.3.5",
     "prettier": "^2.6.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
   }
 }
